Fixed z-index resulting in unclickable links

--- a/CSS/ShapeStyle.css
+++ b/CSS/ShapeStyle.css
@@ -94,7 +94,7 @@ input#navMenu{ display: none}
 
     width: 100%;
     min-height: 100vh;
-    z-index: -5;
+    z-index: 2;
 }
 
 .MainScreen{
